ComboBox added in settings.fxml to choose the lenguage. It works, but when clicking it, it directs to the main-view.

--- a/src/main/resources/strings_eng_US.properties
+++ b/src/main/resources/strings_eng_US.properties
@@ -26,9 +26,7 @@ Profile\ settings\:=Profile settings:
 Change\ your\ username=Change your username
 Done=Done
 Log\ out=Log out
-Choose\ a\ lenguage=Choose a lenguage\
+Choose\ a\ lenguage=Choose a lenguage
 Search=Search
-Search=What are your thoughts?\
-What\ are\ your\ thoughts?=Post!
 What\ are\ your\ thoughts?=What are your thoughts?
-Post!=
+Post!=Post!
