--- a/src/main/resources/strings_es_ES.properties
+++ b/src/main/resources/strings_es_ES.properties
@@ -21,8 +21,12 @@ Favourites=Favoritos
 Theme\ selector\:=Tono:
 DARK=OSCURO
 LIGHT=CLARO
-Appearance\:=Apariencia:
+Lenguage\:=Idioma:
 Profile\ settings\:=Ajustes de perfil:
 Change\ your\ username=Cambia tu nombre de usuario
 Done=Hecho
 Log\ out=Cerrar sesion
+Choose\ a\ lenguage=Elige un idioma
+Search=Buscar
+What\ are\ your\ thoughts?=¿Que estas pensando?
+Post!=Subir!
