--- a/src/main/resources/strings_eus_ES.properties
+++ b/src/main/resources/strings_eus_ES.properties
@@ -21,8 +21,12 @@ Favourites=Gustokoenak
 Theme\ selector\:=Tonua:
 DARK=ILUNA
 LIGHT=ARGIA
-Appearance\:=Itxura:
+Lenguage\:=Hizkuntza:
 Profile\ settings\:=Profilaren ezarpenak:
 Change\ your\ username=Erabiltzaile-izena aldatu
 Done=Egina
 Log\ out=Itxi sesioa
+Choose\ a\ lenguage=Hizkuntza bat aukeratu
+Search=Bilatu
+What\ are\ your\ thoughts?=Zertaz ari zara pentsatzen?
+Post!=Igo!
