Lenguage errors solved

--- a/src/main/resources/strings_eng_US.properties
+++ b/src/main/resources/strings_eng_US.properties
@@ -19,8 +19,8 @@ Explore=Explore
 Bookmarks=Bookmarks
 Favourites=Favourites
 Theme\ selector\:=Theme selector:
-DARK=DARK
-LIGHT=LIGHT
+Dark=DARK
+Light=LIGHT
 Lenguage\:=Lenguage:
 Profile\ settings\:=Profile settings:
 Change\ your\ username=Change your username
@@ -30,3 +30,5 @@ Choose\ a\ lenguage=Choose a lenguage
 Search=Search
 What\ are\ your\ thoughts?=What are your thoughts?
 Post!=Post!
+Insert\ account\ token=Insert account token
+Add\ new\ account=Add new account
