--- a/src/main/resources/strings_es_ES.properties
+++ b/src/main/resources/strings_es_ES.properties
@@ -19,8 +19,8 @@ Explore=Explorar
 Bookmarks=Markados
 Favourites=Favoritos
 Theme\ selector\:=Tono:
-DARK=OSCURO
-LIGHT=CLARO
+Dark=OSCURO
+Light=CLARO
 Lenguage\:=Idioma:
 Profile\ settings\:=Ajustes de perfil:
 Change\ your\ username=Cambia tu nombre de usuario
@@ -30,3 +30,5 @@ Choose\ a\ lenguage=Elige un idioma
 Search=Buscar
 What\ are\ your\ thoughts?=¿Que estas pensando?
 Post!=Subir!
+Insert\ account\ token=Inserta un token
+Add\ new\ account=Añadir una cuenta
