--- a/src/main/resources/strings_eus_ES.properties
+++ b/src/main/resources/strings_eus_ES.properties
@@ -19,8 +19,8 @@ Explore=Arakatu
 Bookmarks=Markatuak
 Favourites=Gustokoenak
 Theme\ selector\:=Tonua:
-DARK=ILUNA
-LIGHT=ARGIA
+Dark=ILUNA
+Light=ARGIA
 Lenguage\:=Hizkuntza:
 Profile\ settings\:=Profilaren ezarpenak:
 Change\ your\ username=Erabiltzaile-izena aldatu
@@ -30,3 +30,5 @@ Choose\ a\ lenguage=Hizkuntza bat aukeratu
 Search=Bilatu
 What\ are\ your\ thoughts?=Zertaz ari zara pentsatzen?
 Post!=Igo!
+Insert\ account\ token=Token-a jarri
+Add\ new\ account=Kontu bat sartu
