Fixed resource bundle after b1a1ef6c5d07384f70d4cef93079a58869e48b98

--- a/src/main/resources/strings_es_ES.properties
+++ b/src/main/resources/strings_es_ES.properties
@@ -2,7 +2,7 @@ Account\ token\:=Token de la cuenta:
 Add\ account=Añadir una cuenta
 Choose\ account=Elegir cuenta
 Choose\ an\ account\ to\ enter\ mastodon\ with=Elige una cuenta para entrar en mastodon
-MastodonFX\ -\ Account\ selection=MastodonFX - Selección de cuenta
++Chisme\ -\ Account\ selection=+Chisme - Selección de cuenta
 Remove\ account=Borrar cuenta
 Settings=Ajustes
 token\ status=estatus del token
