--- a/src/main/resources/strings_eus_ES.properties
+++ b/src/main/resources/strings_eus_ES.properties
@@ -2,7 +2,7 @@ Account\ token\:=Kontuaren token-a:
 Add\ account=Kontu bat gehitu
 Choose\ account=Kontua aukeratu
 Choose\ an\ account\ to\ enter\ mastodon\ with=Kontu bat aukeratu matodonen sartzeko
-MastodonFX\ -\ Account\ selection=MastodonFX - Kontuen aukera
++Chisme\ -\ Account\ selection=+Chisme - Kontuen aukera
 Remove\ account=Kontua ezabatu
 Settings=Ezarpenak
 token\ status=tokenaren egoera
